# django-drf-allauth-template

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
core/: settings.py  urls.py
users/: admin.py  forms.py  models.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_birthdate.py  0003_alter_customuser_is_active.py
